fixes issues with avatars not showing up, modal now more modal like

--- a/backend/src/sass/modules/_modal.scss
+++ b/backend/src/sass/modules/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
    background: get-color(white);
    left: 20%;
-   position: absolute;
+   position: fixed;
    right: 20%;
    top: 20%;
    z-index: get-zindex(20);
